tests/ui/traits/const-traits/specialization/const-default-bound-non-const-specialized-bound.stderr
error: non-const fn in const traits are not supported yet
  --> $DIR/const-default-bound-non-const-specialized-bound.rs:18:5
   |
LL |     fn bar();
   |     ^ help: mark the function as const: `(const)`

error: non-const fn in const traits are not supported yet
  --> $DIR/const-default-bound-non-const-specialized-bound.rs:25:5
   |
LL |     default fn bar() {}
   |     ^ help: mark the function as const: `const`

error: non-const fn in const traits are not supported yet
  --> $DIR/const-default-bound-non-const-specialized-bound.rs:38:5
   |
LL |     fn baz();
   |     ^ help: mark the function as const: `(const)`

error: non-const fn in const traits are not supported yet
  --> $DIR/const-default-bound-non-const-specialized-bound.rs:45:5
   |
LL |     default fn baz() {}
   |     ^ help: mark the function as const: `const`

error: non-const fn in const traits are not supported yet
  --> $DIR/const-default-bound-non-const-specialized-bound.rs:53:5
   |
LL |     fn baz() {}
   |     ^ help: mark the function as const: `const`

error[E0119]: conflicting implementations of trait `Bar`
  --> $DIR/const-default-bound-non-const-specialized-bound.rs:28:1
   |
LL | / impl<T> const Bar for T
LL | | where
LL | |     T: ~const Foo,
   | |__________________- first implementation here
...
LL | / impl<T> Bar for T
LL | | where
LL | |     T: Foo, //FIXME ~ ERROR missing `~const` qualifier
LL | |     T: Specialize,
   | |__________________^ conflicting implementation

error[E0119]: conflicting implementations of trait `Baz`
  --> $DIR/const-default-bound-non-const-specialized-bound.rs:48:1
   |
LL | / impl<T> const Baz for T
LL | | where
LL | |     T: ~const Foo,
   | |__________________- first implementation here
...
LL | / impl<T> const Baz for T //FIXME ~ ERROR conflicting implementations of trait `Baz`
LL | | where
LL | |     T: Foo,
LL | |     T: Specialize,
   | |__________________^ conflicting implementation

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0119`.
